more about measurements

--- a/aalto.bib
+++ b/aalto.bib
@@ -2018,6 +2018,25 @@
   isbn = {0022-1031}
 }
 
+@article{crawfordWhoPrejudicedWhom2019,
+  title = {Who {{Is Prejudiced}}, and {{Toward Whom}}? {{The Big Five Traits}} and {{Generalized Prejudice}}},
+  shorttitle = {Who {{Is Prejudiced}}, and {{Toward Whom}}?},
+  author = {Crawford, Jarret T. and Brandt, Mark J.},
+  year = {2019},
+  month = oct,
+  journal = {Personality and Social Psychology Bulletin},
+  volume = {45},
+  number = {10},
+  pages = {1455--1467},
+  publisher = {{SAGE Publications Inc}},
+  issn = {0146-1672},
+  doi = {10.1177/0146167219832335},
+  abstract = {Meta-analyses show that low levels of Openness and Agreeableness correlate with generalized prejudice. However, previous studies narrowly assessed prejudice toward low-status, disadvantaged groups. Using a broad operationalization of generalized prejudice toward a heterogeneous array of targets, we sought to answer two questions: (a) Are some types of people prejudiced against most types of groups? and (b) Are some types of people prejudiced against certain types of groups? Across four samples (N = 7,543), Openness was very weakly related to broad generalized prejudice, r = -.03, 95\% confidence interval (CI) [-.07, -.001], whereas low Agreeableness was reliably associated with broad generalized prejudice, r = -.23, 95\% CI [-.31, -.16]. When target characteristics moderated relationships between Big Five traits and prejudice, they implied that perceiver\textendash target dissimilarity on personality traits explains prejudice. Importantly, the relationship between Agreeableness and prejudice remained robust across target groups, suggesting it is the personality trait orienting people toward (dis)liking of others.},
+  langid = {english},
+  keywords = {agreeableness,Big Five,generalized prejudice,openness,prejudice},
+  file = {/home/avnerus/Zotero/storage/2RL5WSSZ/Crawford and Brandt - 2019 - Who Is Prejudiced, and Toward Whom The Big Five T.pdf}
+}
+
 @book{crimmensDramaTherapyStorymaking2006,
   title = {Drama Therapy and Storymaking in Special Education},
   author = {Crimmens, Paula},
@@ -3607,6 +3626,25 @@
 @article{gollmitzerClosenessControlInterpersonal,
   title = {Closeness or {{Control}} in {{Interpersonal Communication Online}}? {{Long-Distance Relationships Mediated Through Skype}}},
   author = {Gollmitzer, Mirjam}
+}
+
+@article{gongBoundaryRacialPrejudice2008,
+  title = {The Boundary of Racial Prejudice: {{Comparing}} Preferences for Computer-Synthesized {{White}}, {{Black}}, and Robot Characters},
+  shorttitle = {The Boundary of Racial Prejudice},
+  author = {Gong, Li},
+  year = {2008},
+  month = sep,
+  journal = {Computers in Human Behavior},
+  series = {Including the {{Special Issue}}: {{Internet Empowerment}}},
+  volume = {24},
+  number = {5},
+  pages = {2074--2093},
+  issn = {0747-5632},
+  doi = {10.1016/j.chb.2007.09.008},
+  abstract = {Humanoid social robots are predicted to interact with humans in various domains of social life as robot technology keeps advancing. One area for understanding the impact of robots on human society is interracial relations. Would robots constitute a nonhuman outgroup to trigger human ingroup favoritism which will confine the boundary of racial prejudice? A study (N=105) assessed Whites' rank-ordered preferences for 15 White, Black and robot computer-synthesized characters. Explicit racial prejudice positively predicted White versus Black character preferences for liking and as one's avatar, virtual friend, and virtual tutor. The implicit racial prejudice, measured with the Implicit Association Test (IAT), provided additional predictive utility for virtual friend. Among the 64 participants who reported minimal interest in robots, explicit racial prejudice negatively predicted preferences for Black over robot characters, showing a pattern that individuals with high prejudice preferred robot characters over Black ones. The results suggest alarming strength of racial prejudice and cast doubt on the notion of all-human ingroup favoritism in comparison to robots.},
+  langid = {english},
+  keywords = {Computer-synthesized characters,Explicit racial attitude,Humanoid social robots,IAT,Implicit racial attitude,Racial prejudice},
+  file = {/home/avnerus/Zotero/storage/DHS4CH96/S0747563207001549.html}
 }
 
 @article{goodwinAnalVoice2016,
@@ -6091,6 +6129,14 @@
   volume = {30}
 }
 
+@book{lavrakasEncyclopediaSurveyResearch2008,
+  title = {Encyclopedia of Survey Research Methods},
+  author = {Lavrakas, Paul J.},
+  year = {2008},
+  publisher = {{Sage publications}},
+  isbn = {1-4522-6147-4}
+}
+
 @article{leaComputermediatedCommunicationDeindividuation1991,
   title = {Computer-Mediated Communication, de-Individuation and Group Decision-Making},
   author = {Lea, Martin and Spears, Russell},
@@ -7008,6 +7054,22 @@
   file = {/home/avnerus/Zotero/storage/R3SVLDGY/Maziz et al. - 2017 - Knitting and weaving artificial muscles.pdf;/home/avnerus/Zotero/storage/9AZCLJWB/e1600327.html;/home/avnerus/Zotero/storage/YQA6RB8S/e1600327.html}
 }
 
+@article{mcconnellRelationsImplicitAssociation2001,
+  title = {Relations among the {{Implicit Association Test}}, {{Discriminatory Behavior}}, and {{Explicit Measures}} of {{Racial Attitudes}}},
+  author = {McConnell, Allen R. and Leibold, Jill M.},
+  year = {2001},
+  month = sep,
+  journal = {Journal of Experimental Social Psychology},
+  volume = {37},
+  number = {5},
+  pages = {435--442},
+  issn = {0022-1031},
+  doi = {10.1006/jesp.2000.1470},
+  abstract = {Heretofore, no research has shown that meaningful variability on the Implicit Association Test (IAT) relates to intergroup discrimination or to explicit measures of prejudice. In the current study, White undergraduates interacted separately with White and Black experimenters, and their behavior during these social interactions was assessed by trained judges and by the experimenters themselves. The participants also completed explicit measures of racial prejudice and a race IAT. As predicted, those who revealed stronger negative attitudes toward Blacks (vs Whites) on the IAT had more negative social interactions with a Black (vs a White) experimenter and reported relatively more negative Black prejudices on explicit measures. The implications of these results for the IAT and its relations to intergroup discrimination and to explicit measures of attitudes are discussed.},
+  langid = {english},
+  file = {/home/avnerus/Zotero/storage/PWGTAV8F/McConnell and Leibold - 2001 - Relations among the Implicit Association Test, Dis.pdf;/home/avnerus/Zotero/storage/TA9ATNXJ/S0022103100914707.html}
+}
+
 @article{mcdonnellTeachingPhotographyPhotography2020,
   title = {Teaching {{Photography}} via {{Photography}}},
   author = {McDonnell, Ben},
@@ -7265,6 +7327,25 @@
   author = {Middleton, Christine},
   pages = {267},
   langid = {english}
+}
+
+@article{millerEffectsIntergroupContact2004,
+  title = {Effects of {{Intergroup Contact}} and {{Political Predispositions}} on {{Prejudice}}: {{Role}} of {{Intergroup Emotions}}},
+  shorttitle = {Effects of {{Intergroup Contact}} and {{Political Predispositions}} on {{Prejudice}}},
+  author = {Miller, Daniel A. and Smith, Eliot R. and Mackie, Diane M.},
+  year = {2004},
+  month = jul,
+  journal = {Group Processes \& Intergroup Relations},
+  volume = {7},
+  number = {3},
+  pages = {221--237},
+  publisher = {{SAGE Publications Ltd}},
+  issn = {1368-4302},
+  doi = {10.1177/1368430204046109},
+  abstract = {Two broad distal causes of prejudice are past history of intergroup contact and general political predispositions. Two studies investigate the extent to which these effects are mediated by emotions directed at the outgroup, as proposed by Intergroup Emotions Theory (Smith, 1993). In both studies, past intergroup contact and Social Dominance Orientation predict prejudice. as measured either by a feeling thermometer or the Modern Racism Scale. Furthermore, for both studies these effects are significantly mediated by intergroup emotions, above and beyond measures of stereotypes (stereotype endorsement in Study 1 and stereotype knowledge in Study 2) that were entered as alternative potential mediators. Stereotype endorsement also plays a significant mediational role in one case. Increased attention to the role of emotions in intergroup relations, including in the mediation of such powerful and well-known effects as those of intergroup contact and political predispositions, appears to be warranted.},
+  langid = {english},
+  keywords = {contact,intergroup emotion,prejudice,social dominance,stereotypes},
+  file = {/home/avnerus/Zotero/storage/Q4I5EM5S/Miller et al. - 2004 - Effects of Intergroup Contact and Political Predis.pdf}
 }
 
 @article{millsPersonalizedSpeechSynthesis2014,
@@ -8813,6 +8894,14 @@
   abstract = {Are students willing to accept robotic support for learning when their attitudes toward educational robots are moderate? Probably not, as evidence from psychological research has suggested that attitudes predict how people will behave toward an attitude object. Consequently, a negative view of robots could represent a strong barrier to the deployment of robots in educational environments. Attitude change might facilitate a smooth introduction of educational robots into learning settings. Thus, the present research builds on the fact that actively including end users in the prototyping process of a robot might increase positive attitudes toward it. Indeed, our research is among the first works which demonstratethat participation in the prototyping process of an educational robot positively affected attitudes toward educational robots in general and significantly reduced educational robot anxiety. However, students' behavioral intentions toward educational robots were not influenced by participation. These findings raise intriguing questions regarding the relevance of user involvement in the development of robots. Therefore, the discussion focuses on how to improve this process and how user involvement in robot design processes provides a valuable contribution to the acceptance of social robots in everyday life.},
   langid = {english},
   file = {/home/avnerus/Zotero/storage/6TTTTLY3/Reich-Stiebert et al. - 2019 - Involve the user! Changing attitudes toward robots.pdf}
+}
+
+@misc{RelationsImplicitAssociation,
+  title = {Relations among the {{Implicit Association Test}}, {{Discriminatory Behavior}}, and {{Explicit Measures}} of {{Racial Attitudes}} | {{Elsevier Enhanced Reader}}},
+  doi = {10.1006/jesp.2000.1470},
+  howpublished = {https://reader.elsevier.com/reader/sd/pii/S0022103100914707?token=BEB5F818E20CEE2B2A71BCEC9E1D8D91D807515293570E26B86530D7DC6F79B6496C1A31870C208B3A23B6A6B913E783\&originRegion=eu-west-1\&originCreation=20220222125945},
+  langid = {english},
+  file = {/home/avnerus/Zotero/storage/JAL2AHG9/S0022103100914707.html}
 }
 
 @book{renaudHardwareSoftwarePeopleware2001,
@@ -11327,6 +11416,12 @@
   abstract = {In this Internet age where computer classrooms, smart phones, and tablet devices are becoming the norm, it is timely that social and educational psychologists integrate such technologies within the field of intergroup relations to develop innovative, effective, and validated tools to promote intergroup harmony. This critical review article introduces a new online contact strategy\textemdash Electronic- or E-contact\textemdash that allows for physically segregated ingroup and outgroup members to synchronously interact online, in a prestructured format. The synchronous nature of the intergroup interaction allows for the engagement of self in the contact situation that in turn strengthens the effectiveness of E-contact in promoting intergroup harmony. Previous research investigating online contact is reviewed, and an evaluation of a best-practice E-contact framework is provided. This framework is based on the successful 9-week Dual Identity Electronic Contact (DIEC) program that has been shown to maintain reductions in intergroup bias between Muslim and Christian students at 3 time periods: 2 weeks, 6 months, and 12 months post-DIEC intervention. Limitations of the Internet with regard to potentially creating negative contact are also highlighted to offer a balanced critique. Finally, future research designs are proposed to further support and enhance the success of E-contact research to improve intergroup relations and promote peace.},
   langid = {english},
   file = {/home/avnerus/Zotero/storage/8AUKGPNR/White et al. - 2015 - Improving Intergroup Relations in the Internet Age.pdf}
+}
+
+@misc{WhoPrejudicedWhom,
+  title = {Who {{Is Prejudiced}}, and {{Toward Whom}}? {{The Big Five Traits}} and {{Generalized Prejudice}} - {{Jarret T}}. {{Crawford}}, {{Mark J}}. {{Brandt}}, 2019},
+  howpublished = {https://journals.sagepub.com/doi/full/10.1177/0146167219832335},
+  file = {/home/avnerus/Zotero/storage/8JBW5PSP/0146167219832335.html}
 }
 
 @unpublished{wikstromCollaborativeBlockDesign,
