Writing the paper's results

--- a/aalto.bib
+++ b/aalto.bib
@@ -320,6 +320,23 @@
   file = {/home/avnerus/Zotero/storage/F9I5XQNA/Andersen et al. - Robot Learning From a Human Expert Using Inverse R.pdf}
 }
 
+@article{anderssonThinkingNewMaterialism2020,
+  title = {Thinking {{With New Materialism}} in {{Qualitative Case Studies}}},
+  author = {Andersson, {\AA}sa and Korp, Peter and Reinertsen, Anne B.},
+  year = {2020},
+  month = jan,
+  journal = {International Journal of Qualitative Methods},
+  volume = {19},
+  pages = {1609406920976437},
+  publisher = {{SAGE Publications Inc}},
+  issn = {1609-4069},
+  doi = {10.1177/1609406920976437},
+  abstract = {In this article, we discuss challenges and implications of thinking with new materialisms and the Deleuzian philosophy of immanence in qualitative case studies. The aim is to establish a terrain and language of ``minor case studies.'' Deleuze denies two-world ontologies and the ontologically status of single bodies, emphasizing instead how assemblages of human and non-human bodies together produce the world. In this terrain, cases are not objects of inquiry, but life-giving forces that create movement. This in turn changes the premises for how we can approach and explore cases. Rather than represent, comment and explain what cases are, we illustrate how a case-assemblage creates possibilities for event-based thinking regarding interesting phenomena (cases), and how these cases are twisted, stretched and pulled out of a conventional case study design. We conclude by discussing epistemological consequences of new materialist ontology.},
+  langid = {english},
+  keywords = {case study,dialectic critique,philosophy of science,social justice,virtual environments},
+  file = {/home/avnerus/Zotero/storage/QAPSW2EN/Andersson et al. - 2020 - Thinking With New Materialism in Qualitative Case .pdf}
+}
+
 @article{andreassonAffectiveTouchHuman2018,
   title = {Affective {{Touch}} in {{Human}}\textendash{{Robot Interaction}}: {{Conveying Emotion}} to the {{Nao Robot}}},
   shorttitle = {Affective {{Touch}} in {{Human}}\textendash{{Robot Interaction}}},
@@ -557,6 +574,22 @@
   number = {3},
   pages = {229--241},
   file = {/home/avnerus/Zotero/storage/YIZKYHCG/Bao et al. - 2018 - Soft robotics Academic insights and perspectives .pdf}
+}
+
+@incollection{bar-talChapterThreeParadoxical2021,
+  title = {Chapter {{Three}} - {{Paradoxical}} Thinking as a Paradigm of Attitude Change in the Context of Intractable Conflict},
+  booktitle = {Advances in {{Experimental Social Psychology}}},
+  author = {{Bar-Tal}, Daniel and Hameiri, Boaz and Halperin, Eran},
+  editor = {Gawronski, Bertram},
+  year = {2021},
+  month = jan,
+  volume = {63},
+  pages = {129--187},
+  publisher = {{Academic Press}},
+  doi = {10.1016/bs.aesp.2020.11.003},
+  abstract = {The chapter introduces a new approach to attitude change, termed paradoxical thinking. It suggests that messages that are consistent with an individual's view, but formulated in an amplified, exaggerated, or even absurd manner, lead to an extended process of deliberative thinking and arouse lower levels of resistance compared to conventional persuasive approaches that use attitude-inconsistent messages. We argue that attitude-inconsistent messages are often automatically rejected among highly involved individuals with extreme views. The paradoxical thinking approach is intended to lead individuals to perceive their held societal beliefs or the current situation as farfetched and implausible, and ultimately, to lead to unfreezing and reevaluation of held attitudes. Eventually, unfreezing may lead to openness to alternative, more moderate viewpoints that may then be adopted. We introduce four variables that are part of the process (i.e., threat to identity, surprise, disagreement with the message, and unfreezing) and present empirical evidence supporting this conception with studies conducted mostly vis-\`a-vis conflict-supporting attitudes in the context of an intractable conflict.},
+  langid = {english},
+  keywords = {Attitude change,Intractable conflict,Paradoxical thinking,Psychological intervention}
 }
 
 @article{bar-talIntractableConflictConflict2000,
@@ -1954,6 +1987,14 @@
   file = {/home/avnerus/Zotero/storage/8GQ665WA/Coole and Frost - 2021 - New Materialisms Ontology\; Agency, and Politics.pdf}
 }
 
+@article{cooleNewMaterialismsOntologya,
+  title = {New {{Materialisms}}: {{Ontology}}, {{Agency}}, and {{Politics}}},
+  author = {Coole, Diana and Frost, Samantha and Bennett, Jane and Cheah, Pheng and Orlie, Melissa A and Grosz, Elizabeth},
+  pages = {348},
+  langid = {english},
+  file = {/home/avnerus/Zotero/storage/IU6FXIVI/Coole et al. - New Materialisms Ontology, Agency, and Politics.pdf}
+}
+
 @article{corbinGroundedTheoryResearch1990,
   title = {Grounded Theory Research: {{Procedures}}, Canons, and Evaluative Criteria},
   author = {Corbin, Juliet M. and Strauss, Anselm},
@@ -3150,6 +3191,25 @@
   file = {/home/avnerus/Zotero/storage/LLPAMGKI/Fox et al. - 2015 - Avatars Versus Agents A Meta-Analysis Quantifying.pdf;/home/avnerus/Zotero/storage/TC56IMM4/07370024.2014.html}
 }
 
+@article{foxDoingNewMaterialist2021,
+  title = {Doing New Materialist Data Analysis: A {{Spinozo-Deleuzian}} Ethological Toolkit},
+  shorttitle = {Doing New Materialist Data Analysis},
+  author = {Fox, Nick J. and Alldred, Pam},
+  year = {2021},
+  month = jun,
+  journal = {International Journal of Social Research Methodology},
+  volume = {0},
+  number = {0},
+  pages = {1--14},
+  publisher = {{Routledge}},
+  issn = {1364-5579},
+  doi = {10.1080/13645579.2021.1933070},
+  abstract = {With growing social science interest in new materialist and posthuman ontologies, it is timely to explore how these may translate practically into social research methodologies. This task is complicated by differing interpretations of how new materialist precepts should shape research. This paper aims to fill a gap in the literature by setting out a methodology using one specific thread within the new materialisms: Deleuzian `ethology'. Inspired by Spinoza's Ethics, Deleuze established a conceptual toolkit for ethological inquiry, comprising `relation', `assemblage', `affect' and `capacity'. We show how this toolkit translates into a design for analysing empirical data. Effective data analysis also depends on the adequacy and appropriateness of earlier stages in the research process. We therefore also consider an ethological approach to setting a research question, choosing data collection methods and presenting study findings. We conclude with some reflections on the challenges of translating philosophical theory into social science methodology.},
+  keywords = {Assemblage,data analysis,Deleuze,ethology,new materialism,research assemblage},
+  annotation = {\_eprint: https://doi.org/10.1080/13645579.2021.1933070},
+  file = {/home/avnerus/Zotero/storage/GZT5AJE7/Fox and Alldred - 2021 - Doing new materialist data analysis a Spinozo-Del.pdf;/home/avnerus/Zotero/storage/SZ658XUN/13645579.2021.html}
+}
+
 @article{foxSexualizedAvatarsLead2015,
   title = {Sexualized {{Avatars Lead}} to {{Women}}'s {{Self-Objectification}} and {{Acceptance}} of {{Rape Myths}}},
   author = {Fox, Jesse and Ralston, Rachel A. and Cooper, Cody K. and Jones, Kaitlyn A.},
@@ -3858,6 +3918,26 @@
   abstract = {This theoretical paper identifies a need for a definition of asymmetric co-creativity where creativity is expected from the computational agent but not from the human user. Our co-operative creativity framework takes into account that the computational agent has a message to convey in a co-operative fashion, which introduces a trade-off on how creative the computer can be. The requirements of co-operation are identified from an interdisciplinary point of view. We divide cooperative creativity in message creativity, contextual creativity and communicative creativity. Finally these notions are applied in the context of the Peace Machine system concept.},
   langid = {english},
   file = {/home/avnerus/Zotero/storage/NKUQYD89/Hämäläinen and Honkela - 2019 - Co-Operation as an Asymmetric Form of Human-Comput.pdf}
+}
+
+@article{hameiriModeratingAttitudesTimes2016,
+  title = {Moderating Attitudes in Times of Violence through Paradoxical Thinking Intervention},
+  author = {Hameiri, Boaz and Porat, Roni and {Bar-Tal}, Daniel and Halperin, Eran},
+  year = {2016},
+  month = oct,
+  journal = {Proceedings of the National Academy of Sciences},
+  volume = {113},
+  number = {43},
+  pages = {12105--12110},
+  publisher = {{National Academy of Sciences}},
+  issn = {0027-8424, 1091-6490},
+  doi = {10.1073/pnas.1606182113},
+  abstract = {In the current paper, we report a large-scale randomized field experiment, conducted among Jewish Israelis during widespread violence. The study examines the effectiveness of a ``real world,'' multichanneled paradoxical thinking intervention, with messages disseminated through various means of communication (i.e., online, billboards, flyers). Over the course of 6 wk, we targeted a small city in the center of Israel whose population is largely rightwing and religious. Based on the paradoxical thinking principles, the intervention involved transmission of messages that are extreme but congruent with the shared Israeli ethos of conflict. To examine the intervention's effectiveness, we conducted a large-scale field experiment (prepost design) in which we sampled participants from the city population (n = 215) and compared them to a control condition (from different places of residence) with similar demographic and political characteristics (n = 320). Importantly, participants were not aware that the intervention was related to the questionnaires they answered. Results showed that even in the midst of a cycle of ongoing violence within the context of one of the most intractable conflicts in the world, the intervention led hawkish participants to decrease their adherence to conflict-supporting attitudes across time. Furthermore, compared with the control condition, hawkish participants that were exposed to the paradoxical thinking intervention expressed less support for aggressive policies that the government should consider as a result of the escalation in violence and more support for conciliatory policies to end the violence and promote a long-lasting agreement.},
+  chapter = {Social Sciences},
+  langid = {english},
+  pmid = {27790995},
+  keywords = {field experiment,intractable conflict,paradoxical thinking,psychological intervention},
+  file = {/home/avnerus/Zotero/storage/IL9WNZSG/Hameiri et al. - 2016 - Moderating attitudes in times of violence through .pdf;/home/avnerus/Zotero/storage/WK4SL3TU/12105.html}
 }
 
 @article{hammackNarratingHyphenatedSelves2010,
@@ -8173,6 +8253,12 @@
   file = {/home/avnerus/Zotero/storage/NU6675RT/Pagotto et al. - 2010 - The effectiveness of intergroup contact at work M.pdf}
 }
 
+@misc{ParadoxicalThinkingNew,
+  title = {Paradoxical Thinking as a New Avenue of Intervention to Promote Peace | {{PNAS}}},
+  howpublished = {https://www.pnas.org/content/111/30/10996.abstract?sid=c44c9e7d-e715-4ac0-a830-72c77f17705e},
+  file = {/home/avnerus/Zotero/storage/V4UBKKB5/10996.html}
+}
+
 @book{pariserFilterBubbleWhat2011,
   title = {The Filter Bubble: {{What}} the {{Internet}} Is Hiding from You},
   author = {Pariser, Eli},
@@ -10717,6 +10803,14 @@
   abstract = {This paper presents a platform to implement and evaluate a learning by imitation framework which enables humanoid robots to learn hand gestures from human beings. A marker based system is used to capture human motion data. From this data we extract the shoulder and elbow joint angles, which uniquely characterize a particular hand gesture. The proposed imitation learning framework aims to generalize over multiple demonstrations of the same hand gesture and thus learn it. The set of joint angle trajectories used for training are first aligned temporally using Dynamic Time Warping (DTW) and then generalized by weighted averaging. The framework operates in the joint space. The algorithm has been implemented and tested on the Nao Humanoid robot. We also propose a novel method to evaluate the proposed imitation learning framework. We place markers on the robot's arm analogous to the placement of markers on the human subject's arm, and then compare the respective joint angle trajectories.},
   keywords = {Data mining,Elbow,Feature extraction,Hand Gestures,Human-Robot Interaction,Humanoid robots,Humanoids,Humans,Imitation Learning,Orbital robotics,Programming by Demonstration,Robotics and automation,Shoulder,Testing,USA Councils},
   file = {/home/avnerus/Zotero/storage/7QSLA588/Thobbi and Sheng - 2010 - Imitation learning of hand gestures and its evalua.pdf}
+}
+
+@article{thomasPostQualitativeResearchInnovative,
+  title = {Post-{{Qualitative Research}} and {{Innovative Methodologies}}},
+  author = {Thomas, Matthew K E and Bellingham, Robin},
+  pages = {227},
+  langid = {english},
+  file = {/home/avnerus/Zotero/storage/DRMXN2G6/Thomas and Bellingham - Post-Qualitative Research and Innovative Methodolo.pdf}
 }
 
 @article{thrunFrameworkHumanRobotInteraction2004,
