--- a/survey/research_questions.Rmd
+++ b/survey/research_questions.Rmd
@@ -415,15 +415,79 @@ t_test(Q_GROUP_SLIDER_1 ~ Q_GENDER)
 df <- Telerobot_ages %>%
 filter(Q_DEMOGRAPHICS_2 <= 2) %>%
 mutate(Q_GENDER = as_factor(Q_DEMOGRAPHICS_2)) %>%
-select(v,starts_with("Q_TELEROBOT_WOULD_U"), Q_GENDER, Q_AGE) %>%
+#filter(Q_GENDER == 'Female') %>%
+#filter(v == 'IL') %>%
+select(v,starts_with("Q_TELEROBOT_WOULD_U"), Q_GENDER, Q_AGE, Q_TECH_CONFIDENCE, Q_ROBOT_NARS) %>%
 drop_na()
+
+c("Q_TELEROBOT_WOULD_U_1","Q_TELEROBOT_WOULD_U_2","Q_TELEROBOT_WOULD_U_3") %>%
+#map(~ data.frame(append(anova_test(as.formula(paste0(.x," ~ v * Q_GENDER * Q_AGE")), data=df),c(test=.x))))
+map(~ anova_test(as.formula(paste0(.x," ~ v * Q_AGE * Q_GENDER")), data=df,effect.size = "pes"),c(test=.x))
+
 
 df %>%
 group_by(v, Q_GENDER) %>%
 summarise(across(starts_with("Q_TELEROBOT_WOULD_U"), list(mean=mean)))
 
-c("Q_TELEROBOT_WOULD_U_1","Q_TELEROBOT_WOULD_U_2","Q_TELEROBOT_WOULD_U_3") %>%
-map(~ anova_test(as.formula(paste0(.x," ~ v + Q_GENDER + Q_AGE")), data=df))
+
+ggscatter(df, x = "Q_AGE", y = "Q_TELEROBOT_WOULD_U_1",
+          add = "reg.line",                                 # Add regression line
+          conf.int = TRUE,                                  # Add confidence interval
+          facet.by = "v",
+          add.params = list(color = "blue",
+                            fill = "lightgray")
+          )+
+  stat_cor(method = "pearson", label.x = 15, label.y = 60)
+
+ggbarplot(
+   df,
+   x = "Q_GENDER",
+   y = "Q_TELEROBOT_WOULD_U_1",
+   add="mean",
+  fill = "Q_GENDER",
+   facet.by = "v",
+  palette = get_palette("npg", 3)
+)
+
+
+ggscatter(df, x = "Q_ROBOT_NARS", y = "Q_TELEROBOT_WOULD_U_1",
+          add = "reg.line",                                 # Add regression line
+          conf.int = TRUE,                                  # Add confidence interval
+        #  facet.by = "v",
+          add.params = list(color = "blue",
+                            fill = "lightgray")
+          )+
+  stat_cor(method = "pearson", label.x = -15, label.y = 60)
+
+ggbarplot(
+   df,
+   x = "Q_GENDER",
+   y = "Q_TELEROBOT_WOULD_U_2",
+   add="mean",
+  fill = "Q_GENDER",
+   facet.by = "v",
+  palette = get_palette("npg", 3)
+)
+
+ggbarplot(
+   df,
+   x = "Q_GENDER",
+   y = "Q_TELEROBOT_WOULD_U_3",
+   add="mean",
+  fill = "Q_GENDER",
+   facet.by = "v",
+  palette = get_palette("npg", 3)
+)
+
+
+ggscatter(df, x = "Q_ROBOT_NARS", y = "Q_TELEROBOT_WOULD_U_3",
+          add = "reg.line",                                 # Add regression line
+          conf.int = TRUE,                                  # Add confidence interval
+   #       facet.by = "v",
+          add.params = list(color = "blue",
+                            fill = "lightgray")
+          )+
+  stat_cor(method = "pearson", label.x = -15, label.y = 60)
 
 
 ```
